--- a/HTTP Request/index.html
+++ b/HTTP Request/index.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <!--Siempre el script de la libreria va antes que el archivo js que usa axios-->
     <script src="app.js"></script>
 </body>
 
